zotprime-k8s/GKE/manifests/zotprime-dataserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: dataserver
  name: dataserver
  namespace: zotprime
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: dataserver-api
      port: 80
      targetPort: 80
#    - name: s3
#      port: 8082
#      targetPort: 8082
  selector:
    apps: zotprime-dataserver
  type: ClusterIP
status:
  loadBalancer: {}


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apps: zotprime-dataserver
  name: zotprime-dataserver
  namespace: zotprime
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: zotprime-dataserver
  strategy: {}
  template:
    metadata:
      labels:
        apps: zotprime-dataserver
      name: zotprime-dataserver
    spec:
      containers:
        - image: uniuu/zotprime-dataserver:v2.8.0
          imagePullPolicy: Always
          name: zotprime-dataserver
          ports:
            - containerPort: 80
#            - containerPort: 8082
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-xc", 'mkdir -p /var/www/zotero/log && bash /tmp/_conf/init.sh > /var/www/zotero/log/init.log 2>&1 ; exit 0' ]
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
#            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /
              port: 80
          resources:
            limits:
              memory: 512Mi
#              cpu: "0.3"
            requests:
              memory: 512Mi
              cpu: "1"
          volumeMounts:
            - name: dataserver-config
              mountPath: "/tmp/_conf"
              readOnly: true
      priorityClassName: low-priority
      restartPolicy: Always
      hostAliases:
        - ip: "10.30.11.11"
          hostnames:
          - "s3min.projectdev.net"
      securityContext: {}
      volumes:
        - name: dataserver-config
          configMap:
            name: dataserver-config
status: {}
