zotprime-k8s/GKE/manifests/zotprime-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: zotprime
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    apps: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: mariadb
  selector:
    apps: zotprime-db
  clusterIP: None
