zotprime-k8s/GKE/manifests/zotprime-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: zotprime
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    apps: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: mariadb
  selector:
    apps: zotprime-db
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zotprime-db
  namespace: zotprime
  labels:
    apps: zotprime-db
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      apps: zotprime-db
  template:
    metadata:
      labels:
        apps: zotprime-db
    spec:
      containers:
      - name: mariadb
        image: uniuu/zotprime-db:v2.8.0
        ports:
        - containerPort: 3306
          name: mariadb-port
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
            cpu: "0.5"
        command:
          - /bin/bash
          - -c
        args: 
          -  set -o allexport && source tmp/_key/secret-db.txt && set +o allexport && /usr/local/bin/docker-entrypoint.sh mysqld         
        volumeMounts:
        - name: datadb
          mountPath: /var/lib/mysql/
        - name: db-secret
          mountPath: tmp/_key/
        securityContext:
          runAsUser: 999
          runAsGroup: 999
      volumes:
        - name: db-secret
          secret:
            secretName: db-secret
      priorityClassName: high-priority
  volumeClaimTemplates:
  - metadata:
      name: datadb
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
