zotprime-k8s/GKE/manifests/zotprime-elasticsearch.yaml

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: zotprime
  labels:
    apps: elasticsearch
spec:
  ports:
  - port: 9300
    name: elasticsearch
  clusterIP: None
  selector:
    apps: zotprime-elasticsearch

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zotprime-elasticsearch
  namespace: zotprime
  labels:
#    component: elasticsearch
    apps: zotprime-elasticsearch
spec:
  selector:
    matchLabels:
      apps: zotprime-elasticsearch
  serviceName: "elasticsearch-masterservice"
  replicas: 1
  template:
    metadata:
      labels:
        apps: zotprime-elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: uniuu/zotprime-elasticsearch:v2.7.0
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: dataes
          mountPath: /data
      priorityClassName: high-priority
  volumeClaimTemplates:
  - metadata:
      name: dataes
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 2Gi
