zotprime-k8s/GKE/manifests/zotprime-memcached.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: memcached
  name: memcached
  namespace: zotprime
spec:
  ports:
    - name: memcached
      port: 11211
      targetPort: 11211
  selector:
    apps: zotprime-memcached
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zotprime-memcached
  namespace: zotprime
  labels:
    apps: zotprime-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: zotprime-memcached
  template:
    metadata:
      name: memcached
      labels:
        apps: zotprime-memcached
    spec:
      containers:
      - name: memcached
        image: uniuu/zotprime-memcached:v2.7.0
        resources:
          limits:
            memory: 2000Mi
          requests:
            cpu: 200m
            memory: 2000Mi
        ports:
          - containerPort: 11211
            protocol: TCP
        args:
          - -m 2047
          - -I 50M
      priorityClassName: high-priority
