zotprime-k8s/GKE/manifests/zotprime-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: phpmyadmin
  name: phpmyadmin
  namespace: zotprime
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: phpmyadmin
      port: 80
      targetPort: 80
  selector:
    apps: zotprime-phpmyadmin
  type: ClusterIP


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zotprime-phpmyadmin
  namespace: zotprime
  labels:
    apps: zotprime-phpmyadmin
spec:
  selector:
    matchLabels:
      apps: zotprime-phpmyadmin
  template:
    metadata:
      labels:
        apps: zotprime-phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: uniuu/zotprime-phpmyadmin:v2.7.0
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 256Mi
#              cpu: "0.1"
            requests:
              memory: 256Mi
              cpu: "0.1"
