zotprime-k8s/GKE/manifests/zotprime-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: zotprime
  labels:
    apps: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    apps: zotprime-redis
  clusterIP: None
