zotprime-k8s/GKE/manifests/zotprime-streamserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: streamserver
  name: streamserver
  namespace: zotprime
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "streamserver-backendconfig"}'
spec:
  ports:
    - name: streamserver
      port: 81
      targetPort: 81
  selector:
    apps: zotprime-streamserver
  type: ClusterIP
