zotprime-k8s/GKE/manifests/zotprime-tinymceclean.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: tinymceclean
  name: tinymceclean
  namespace: zotprime
spec:
  ports:
    - name: tinymceclean
      port: 16342
      targetPort: 16342
  selector:
    apps: zotprime-tinymceclean
  type: ClusterIP
#status:
#  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apps: zotprime-tinymceclean
  name: zotprime-tinymceclean
  namespace: zotprime
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: zotprime-tinymceclean
  strategy: {}
  template:
    metadata:
      labels:
        apps: zotprime-tinymceclean
      name: zotprime-tinymceclean
    spec:
      containers:
        - image: uniuu/zotprime-tinymceclean:v2.7.0
          imagePullPolicy: Always
          name: zotprime-tinymceclean
          ports:
            - containerPort: 16342
          resources:
            limits:
              memory: 256Mi
#              cpu: "0.1"
            requests:
              memory: 256Mi
              cpu: "0.1"
      priorityClassName: medium-priority
      restartPolicy: Always
      securityContext: {}
status: {}
